{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 17,
  "lineage": "cbc39bb8-380d-0d85-ad8b-29e2a8f8cc00",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "c4c_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442331496833:internet-gateway/igw-09f13e319fa222b86",
            "id": "igw-09f13e319fa222b86",
            "owner_id": "442331496833",
            "tags": {
              "Name": "dev-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ec0ffa5d1040f029"
          },
          "dependencies": [
            "aws_vpc.c4c_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09f13e319fa222b86",
            "id": "r-rtb-056dd601e7f2b12391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056dd601e7f2b1239",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.c4c_internet_gateway",
            "aws_route_table.c4c_public_rt",
            "aws_vpc.c4c_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "c4c_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442331496833:route-table/rtb-056dd601e7f2b1239",
            "id": "rtb-056dd601e7f2b1239",
            "owner_id": "442331496833",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f13e319fa222b86",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public-rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec0ffa5d1040f029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.c4c_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c4c_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049ce3dbc1c6b52f2",
            "route_table_id": "rtb-056dd601e7f2b1239",
            "subnet_id": "subnet-0b0ba480a928f4df0"
          },
          "dependencies": [
            "aws_route_table.c4c_public_rt",
            "aws_subnet.c4c_public_subnet",
            "aws_vpc.c4c_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "c4c_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442331496833:security-group/sg-04515d4554bbe4f1d",
            "description": "dev security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04515d4554bbe4f1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-sg",
            "name_prefix": "",
            "owner_id": "442331496833",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec0ffa5d1040f029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.c4c_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "c4c_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442331496833:subnet/subnet-0b0ba480a928f4df0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0ba480a928f4df0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442331496833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0ec0ffa5d1040f029"
          },
          "dependencies": [
            "aws_vpc.c4c_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "c4c_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442331496833:vpc/vpc-0ec0ffa5d1040f029",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0fa0683260a981ed7",
            "default_route_table_id": "rtb-0418c65ce1ee76743",
            "default_security_group_id": "sg-05d40236df6656053",
            "dhcp_options_id": "dopt-83aebdf8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ec0ffa5d1040f029",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0418c65ce1ee76743",
            "owner_id": "442331496833",
            "tags": {
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "dev",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}